<resources>
    <string name="app_name">OCR App</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_pass">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="no_account">¿No tienes una cuenta?</string>
    <string name="register_here">Regístrate aquí</string>
    <string name="change_pass">Cambiar Contraseña</string>
    <string name="current_pass">Actual contraseña</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="confirm_new_pass">Confirmar nueva contraseña</string>
    <string name="confirm">Confirmar</string>
    <string name="recover_pass">Recuperar Contraseña</string>
    <string name="send">Enviar</string>
    <string name="message_recover_pass">Hemos enviado un correo para que puedas reestablecer tu contraseña</string>
    <string name="back">Regresar</string>
    <string name="record">Registro</string>
    <string name="name">Nombre</string>
    <string name="user_type">Tipo de usuario</string>
    <string name="confirm_pass">Confirmar contraseña</string>
    <string name="register">Registrar</string>
    <string name="client">Cliente</string>
    <string name="company">Empresa</string>
    <string name="meters">Medidores</string>
    <string name="message_meters1">Aún no tienes medidores</string>
    <string name="message_meters2">Agrega medidores para realizar un seguimiento de tu consumo</string>
    <string name="add_meter">Agregar Medidor</string>
    <string name="meter_name">Nombre del medidor</string>
    <string name="meter_serial">Serial del medidor (Opcional)</string>
    <string name="add">Agregar</string>
    <string name="export">Exportar</string>
    <string name="consumptions">Consumos</string>
    <string name="statistics">Estadísticas</string>
    <string name="consumption">Consumo</string>
    <string name="rate">Tarifa</string>
    <string name="meter">Medidor</string>
    <string name="retry">Reintentar</string>
    <string name="feed">Feed</string>
    <string name="recent_consumptions">Consumos recientes</string>
    <string name="message_recent_consumptions">Aún no has realizado ningún consumo</string>
    <string name="tips">Consejos</string>
    <string name="stadistical_summary">Resumen estadístico</string>
    <string name="menu">Menú</string>
    <string name="change_name">Cambiar nombre</string>
    <string name="remove_account">Eliminar cuenta</string>
    <string name="logout">Cerrar sesión</string>
    <string name="new_name">Nuevo nombre</string>
    <string name="remove">Eliminar</string>
    <string name="measures"># Mediciones</string>
    <string name="groups">Grupos</string>
    <string name="message_groups">Crea un grupo para agrupar mediciones</string>
    <string name="create_group">Crear un grupo</string>
    <string name="name_group">Nombre del grupo</string>
    <string name="create">Crear</string>
    <string name="measure">Medicion</string>
    <string name="export_as">Exportar como</string>
    <string name="tag">Tag</string>
    <string name="group">Grupo</string>
    <string name="cameraMenu">Cámara</string>
    <string name="homeMenu">Home</string>
    <string name="meterMenu">Medidor</string>
    <string name="numberConsumptions"># Consumos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_group">Agregar Grupo</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="customer">Cliente</string>
    <string name="enterprise">Empresa</string>


</resources>