<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryDarkColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Consumo Detectado"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        style="@style/TextViewStyle"
        android:textSize="24sp"/>


    <EditText
        android:id="@+id/editConsumption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:textSize="24sp"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/consumption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        style="@style/TextViewStyle"
        android:textSize="24sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editConsumption"/>

    <EditText
        android:id="@+id/editRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/tvRate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editConsumption" />

    <TextView
        android:id="@+id/tvMeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter"
        style="@style/TextViewStyle"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/editRate"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="24sp"/>

    <Spinner
        android:id="@+id/menuMeters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editRate"
        app:layout_constraintLeft_toRightOf="@id/tvMeter"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="24sp"
        android:autofillHints=""
        android:inputType="none" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:text="@string/retry"
        android:layout_marginStart="64dp"
        android:layout_height="wrap_content"
        style="@style/ContainedButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/menuMeters"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        style="@style/ContainedButtonStyle"
        android:layout_marginEnd="64dp"
        app:layout_constraintTop_toBottomOf="@id/menuMeters"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>